Fix T67117: Font thumbnails crash to desktop

We were missing a null pointer check for invalid fonts.